--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -177,31 +177,64 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
+    \textsc{Jun. 2024}   &   \textbf{Invited colloquium}, @ Zhejiang Lab \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Nov. 2024}   &   \textbf{Invited talk}, @ 2024 Chinese-American Kavli Frontiers of Science, Beijing \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Nov. 2024}   &   \textbf{Invited talk}, @ \href{https://csstgc2024.casconf.cn/}{CSST Galaxy and Cosmology Conference} @ Suzhou \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Oct. 2024}   &   \textbf{Invited talk}, @ \href{https://2024casmeeting.casconf.cn/}{2024 Chinese Astronomical Society GA} @ Hangzhou \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Sep. 2024}   &   \textbf{Invited talk}, @ \href{https://cglensing2024.casconf.cn/}{2024 Lensing Conference} @ Jiexiu \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jul. 2024}   &   \textbf{Invited lecture}, @ NAOC Galaxy Cluster Summer School \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jul. 2024}   &   \textbf{Invited lecture}, @ PKU CSST Summer School \\
+    \multicolumn{2}{c}{} \\
+
     \textsc{Jun. 2024}   &   \textbf{Invited lecture}, @ \href{https://cosparhq.cnes.fr/events/cospar-capacity-building-workshops/}{COSPAR/IAU Workshop on JWST}, Chiangmai, Thailand \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2023}   &   \textbf{Invited seminar}, @ University of Science and Technology of China, Hefei \\
+    \textsc{Jun. 2024}   &   \textbf{Invited colloquium}, @ SWIFAR, Yunnan University \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2023}   &   \textbf{Invited seminar}, @ Shanghai Astronomical Observatories, Shanghai \\
+    \textsc{May 2024}   &   \textbf{Invited colloquium}, @ PKU \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Jun. 2023}   &   \textbf{Invited seminar}, @ Shanghai Jiao Tong University, Shanghai \\
+    \textsc{May 2024}   &   \textbf{Invited talk}, @ 26th Guoshoujing Meeting @ Suzhou \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Apr. 2023}   &   \textbf{Invited seminar}, @ Xiamen University, Xiamen \\
+    \textsc{Apr. 2024}   &   \textbf{Invited talk}, @ \href{https://i.astro.tsinghua.edu.cn/~dxu/Hangzhou/index_meeting_HZ.html}{Co-evolution of galactic eco-systems and their large-scale environments}, Hangzhou \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Dec. 2023}   &   \textbf{Invited colloquium}, @ University of Science and Technology of China, Hefei \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2023}   &   \textbf{Invited colloquium}, @ Shanghai Astronomical Observatories, Shanghai \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Jun. 2023}   &   \textbf{Invited colloquium}, @ Shanghai Jiao Tong University, Shanghai \\
+    \multicolumn{2}{c}{} \\
+
+    \textsc{Apr. 2023}   &   \textbf{Invited colloquium}, @ Xiamen University, Xiamen \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Jan. 2023}   &   \textbf{Invited talk}, @ \href{https://aas.org/meetings/aas241}{AAS 241}, Seattle \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Nov. 2022}   &   \textbf{Invited seminar}, @ Nanjing University, Nanjing    \\
+    \textsc{Nov. 2022}   &   \textbf{Invited colloquium}, @ Nanjing University, Nanjing    \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Nov. 2022}   &   \textbf{Invited seminar}, @ Tsinghua University, Beijing   \\
+    \textsc{Nov. 2022}   &   \textbf{Invited colloquium}, @ Tsinghua University, Beijing   \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Oct. 2022}   &   \textbf{Invited seminar}, @ NAOC FLAT (FAST and LAMOST Associated Scientific Colloquium), Beijing \\
+    \textsc{Oct. 2022}   &   \textbf{Invited colloquium}, @ NAOC FLAT (FAST and LAMOST Associated Scientific Colloquium), Beijing \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Jun. 2022}   &   \textbf{Invited talk}, @ \href{https://aas.org/meetings/aas240}{AAS 240}, Pasadena \\
@@ -213,7 +246,7 @@
     \textsc{Jan. 2021}   &   \textbf{Contributed talk}, @ \href{https://aas.org/meetings/aas237}{AAS 237}, virtual    \\
     \multicolumn{2}{c}{} \\
 
-    \textsc{Dec. 2020}   &   \textbf{Invited seminar}, @ Department of Physics and Astronomy, University of Missouri \\
+    \textsc{Dec. 2020}   &   \textbf{Invited colloquium}, @ Department of Physics and Astronomy, University of Missouri \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Dec. 2019}   &   \textbf{Invited talk}, @ Purple Mountain Observatory, Nanjing \\
@@ -345,13 +378,12 @@
 
 \begin{list}{\labelitemi}{\leftmargin=1.7em}
     \vspace*{1ex}
-    \item[17] JWST-GO-03050, PI Goldsmith, \textbf{Contact Wang}: A hot view of cold gas
-    \item[16] JWST-GO-03426, PI Jones: Confirming the population of disk galaxies at z>3
-    \item[15] Keck 2023A\_U139, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
-    \item[14] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
-    \item[13] HST-GO-16667, PI Bradac: The Final Frontier: HST and JWST Exploration of Galaxies Across Cosmic Epochs
-    \item[12] HST-AR-16621, PI Koekemoer: SUPERCAL: Unified Reprocessing of the Large HST Cosmology Survey Fields - New Science, Archival Legacy, and Pathfinder for JWST
-    \item[11] Keck 2022A\_U016, PI Malkan, \emph{2 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
+    \item[16] Keck 2022A\_U016, 2023A\_U139, 2024A\_U245, 2024B\_U423, PI Malkan, \emph{8 Full Nights}: The Most Massive Galaxy Protoclusters at Cosmic Noon---Impact on Galaxy Evolution
+    \item[15] JWST-GO-03050, PI Goldsmith, \textbf{Contact Wang}: A hot view of cold gas
+    \item[14] JWST-GO-03426, PI Jones: Confirming the population of disk galaxies at z>3
+    \item[13] HST-GO-17159, \textbf{PI Wang}, \emph{38 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=17159&mission=hst}{Escaping Lyman Continuum from the Overdensities of Extreme Emission Line Galaxies at z$\sim$2.2}
+    \item[12] HST-GO-16667, PI Bradac: The Final Frontier: HST and JWST Exploration of Galaxies Across Cosmic Epochs
+    \item[11] HST-AR-16621, PI Koekemoer: SUPERCAL: Unified Reprocessing of the Large HST Cosmology Survey Fields - New Science, Archival Legacy, and Pathfinder for JWST
     \item[10] JWST-GO-01571, PI Malkan: PASSAGE--Parallel Application of Slitless Spectroscopy to Analyze Galaxy Evolution
     \item[9] JWST-GO-02136, PI Jones: The emergence of the modern Hubble sequence revealed by JWST slit-stepping
     \item[8] HST-GO-16276, \textbf{PI Wang}, \emph{45 Primary Spacecraft Orbits}: \href{https://archive.stsci.edu/proposal_search.php?id=16276&mission=hst}{WFC3 Spectroscopy of the Most Massive Galaxy Protoclusters at Cosmic Noon}
@@ -429,6 +461,11 @@
 \begin{longtable}{rp{6.3in}}
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
+
+
+23 & Li, S., \textbf{Wang, X.} et al. Early Results from GLASS-JWST. XXV. Electron Density in the Interstellar Medium at 0.7 ≲ z ≲ 9.3 with NIRSpec High-resolution Spectroscopy. \textit{Astrophys. J. Letters}, accepted (\href{https://arxiv.org/abs/2412.08382}{arXiv:2412.08382}) \\
+
+22 & Sun, X., \textbf{Wang, X.} et al. The physical origin of positive metallicity radial gradients in high-redshift galaxies: insights from the FIRE-2 cosmological hydrodynamic simulations. 2024, \textit{Astrophys. J.}, submitted (\href{https://arxiv.org/abs/2409.09290}{arXiv:2409.09290}) \\
 
 21 & Ju, M., \textbf{Wang, X.} et al. MSA-3D: Metallicity Gradients in Galaxies at $z\sim1$ with JWST/NIRSpec Slit-stepping Spectroscopy. 2024, \textit{Astrophys. J. Letters}, submitted (\href{https://arxiv.org/abs/2409.01616}{arXiv:2409.01616}) \\
 
