--- a/xwang_cv_10pt.tex
+++ b/xwang_cv_10pt.tex
@@ -177,7 +177,7 @@
 \vspace*{-.5em}
 \begin{longtable}{r|p{\textwrap}}
 
-    \textsc{Jun. 2024}   &   \textbf{Invited colloquium}, @ Zhejiang Lab \\
+    \textsc{Dec. 2024}   &   \textbf{Invited colloquium}, @ Zhejiang Lab \\
     \multicolumn{2}{c}{} \\
 
     \textsc{Nov. 2024}   &   \textbf{Invited talk}, @ 2024 Chinese-American Kavli Frontiers of Science, Beijing \\
@@ -462,55 +462,54 @@
 
 \multicolumn{2}{c}{\textbf{1st/2nd Author Papers in Refereed Academic Journals}}      \\
 
+    23 & Sun, X., \textbf{Wang, X.} et al. The physical origin of positive metallicity radial gradients in high-redshift galaxies: insights from the FIRE-2 cosmological hydrodynamic simulations. 2024, \textit{Astrophys. J.}, submitted (\href{https://arxiv.org/abs/2409.09290}{arXiv:2409.09290}) [5 citations] \\
 
-23 & Li, S., \textbf{Wang, X.} et al. Early Results from GLASS-JWST. XXV. Electron Density in the Interstellar Medium at 0.7 ≲ z ≲ 9.3 with NIRSpec High-resolution Spectroscopy. \textit{Astrophys. J. Letters}, accepted (\href{https://arxiv.org/abs/2412.08382}{arXiv:2412.08382}) \\
+    22 & \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $2.4\lesssim z\lesssim3.0$ from UVCANDELS. 2025, \textit{Astrophys. J.}, 980, 74 (\href{https://arxiv.org/abs/2308.09064}{arXiv:2308.09064}) [14 citations] \\
 
-22 & Sun, X., \textbf{Wang, X.} et al. The physical origin of positive metallicity radial gradients in high-redshift galaxies: insights from the FIRE-2 cosmological hydrodynamic simulations. 2024, \textit{Astrophys. J.}, submitted (\href{https://arxiv.org/abs/2409.09290}{arXiv:2409.09290}) \\
+    21 & Li, S., \textbf{Wang, X.} et al. Early Results from GLASS-JWST. XXV. Electron Density in the Interstellar Medium at $0.7\lesssim z\lesssim9.3$ with NIRSpec High-resolution Spectroscopy. 2025, \textit{Astrophys. J. Letters}, 979, L13 (\href{https://arxiv.org/abs/2412.08382}{arXiv:2412.08382}) [2 citations] \\
 
-21 & Ju, M., \textbf{Wang, X.} et al. MSA-3D: Metallicity Gradients in Galaxies at $z\sim1$ with JWST/NIRSpec Slit-stepping Spectroscopy. 2024, \textit{Astrophys. J. Letters}, submitted (\href{https://arxiv.org/abs/2409.01616}{arXiv:2409.01616}) \\
+    20 & Ju, M., \textbf{Wang, X.} et al. MSA-3D: Metallicity Gradients in Galaxies at $z\sim1$ with JWST/NIRSpec Slit-stepping Spectroscopy. 2025, \textit{Astrophys. J. Letters}, 978, L39 (\href{https://arxiv.org/abs/2409.01616}{arXiv:2409.01616}) [4 citations] \\
 
-20 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2024, \textit{Astrophys. J. Letters}, 967, L42 (\href{https://arxiv.org/abs/2212.04476}{arXiv:2212.04476}) [31 citations]  \\
+    19 &  \textbf{Wang, X.} et al. A strong He II $\lambda$1640 emitter with extremely blue UV spectral slope at $z=8.16$: presence of Pop III stars? 2024, \textit{Astrophys. J. Letters}, 967, L42 (\href{https://arxiv.org/abs/2212.04476}{arXiv:2212.04476}) [37 citations]  \\
 
-19 & Jiang, H., \textbf{Wang, X.} et al. The Ly$\alpha$ non-detection by JWST NIRSpec of a strong Ly$\alpha$ emitter at z=5.66 confirmed by MUSE. 2024, \textit{Astrophys. J.}, 972, 121 (\href{https://arxiv.org/abs/2312.04151}{arXiv:2312.04151}) \\
+    18 & Jiang, H., \textbf{Wang, X.} et al. The Ly$\alpha$ non-detection by JWST NIRSpec of a strong Ly$\alpha$ emitter at z=5.66 confirmed by MUSE. 2024, \textit{Astrophys. J.}, 972, 121 (\href{https://arxiv.org/abs/2312.04151}{arXiv:2312.04151}) [7 citations] \\
 
-18 & Sun, L., \textbf{Wang, X.} et al. The UV luminosity function at $0.6 < z < 1$ from UVCANDELS. 2024, \textit{Astrophys. J.}, 972, 8 (\href{https://arxiv.org/abs/2311.15664}{arXiv:2311.15664}) \\
+    17 & Sun, L., \textbf{Wang, X.} et al. The UV luminosity function at $0.6 < z < 1$ from UVCANDELS. 2024, \textit{Astrophys. J.}, 972, 8 (\href{https://arxiv.org/abs/2311.15664}{arXiv:2311.15664}) [11 citations] \\
 
-17 & He, X., \textbf{Wang, X.} et al. Early results from GLASS-JWST. XXVII. The mass-metallicity relation in lensed field galaxies at cosmic noon with NIRISS. 2023, \textit{Astrophys. J. Letters}, 960, L13, (\href{https://arxiv.org/abs/2312.01932}{arXiv:2312.01932}) \\
+    16 & He, X., \textbf{Wang, X.} et al. Early results from GLASS-JWST. XXVII. The mass-metallicity relation in lensed field galaxies at cosmic noon with NIRISS. 2023, \textit{Astrophys. J. Letters}, 960, L13, (\href{https://arxiv.org/abs/2312.01932}{arXiv:2312.01932}) [11 citations] \\
 
-16 & Shi, D., \textbf{Wang, X.} et al. The Emergence of Brightest Cluster Galaxy in the Most Massive Protocluster Core. 2024, \textit{Astrophys. J.}, 963, 21 (\href{https://arxiv.org/abs/2303.09726}{arXiv:2303.09726}) \\
+    15 & Shi, D., \textbf{Wang, X.} et al. The Emergence of Brightest Cluster Galaxy in the Most Massive Protocluster Core. 2024, \textit{Astrophys. J.}, 963, 21 (\href{https://arxiv.org/abs/2303.09726}{arXiv:2303.09726}) [7 citations] \\
 
-15 &  \textbf{Wang, X.} et al. Ultraviolet and Blue Optical Imaging of UVCANDELS. 2024, \textit{Res. Notes AAS}, 8, 26 (\href{https://iopscience.iop.org/article/10.3847/2515-5172/ad1f6f}{DOI 10.3847/2515-5172/ad1f6f})  \\
+    14 &  \textbf{Wang, X.} et al. Ultraviolet and Blue Optical Imaging of UVCANDELS. 2024, \textit{Res. Notes AAS}, 8, 26 (\href{https://iopscience.iop.org/article/10.3847/2515-5172/ad1f6f}{DOI 10.3847/2515-5172/ad1f6f}) [7 citations] \\
 
-14 &  \textbf{Wang, X.} et al. The Lyman Continuum Escape Fraction of Star-forming Galaxies at $z\gtrsim2.4$ from UVCANDELS. 2023, submitted to \textit{Astrophys. J.} (\href{https://arxiv.org/abs/2308.09064}{arXiv:2308.09064}) [2 citations] \\
+    13 &  Wang, K., \textbf{Wang, X.}, Chen, Y. Environmental Dependence of the Mass-Metallicity Relation in Cosmological Hydrodynamical Simulations. 2023, \textit{Astrophys. J.}, 951, 66 (\href{https://arxiv.org/abs/2305.08161}{arXiv:2305.08161}) [11 citations] \\
 
-13 &  Wang, K., \textbf{Wang, X.}, Chen, Y. Environmental Dependence of the Mass-Metallicity Relation in Cosmological Hydrodynamical Simulations. 2023, \textit{Astrophys. J.}, 951, 66 (\href{https://arxiv.org/abs/2305.08161}{arXiv:2305.08161}) [1 citations]    \\
+    12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, 938, L16 (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [15 citations] \\
 
-12 &  \textbf{Wang, X.} et al. Early results from GLASS-JWST. IV. Spatially resolved metallicity in a low-mass $z\sim3$ galaxy with NIRISS. 2022, \textit{Astrophys. J. Letters}, 938, L16 (\href{https://arxiv.org/abs/2207.13113}{arXiv:2207.13113}) [15 citations] \\
+    11 &  Li, Z., \textbf{Wang, X.} et al. First Census of Gas-phase Metallicity Gradients of Star-forming Galaxies in OverdenseEnvironments at Cosmic Noon. 2022, \textit{Astrophys. J. Letters}, 929, L8 (\href{https://arxiv.org/abs/2204.03008}{arXiv:2204.03008}) [17 citations] \\
 
-11 &  Li, Z., \textbf{Wang, X.} et al. First Census of Gas-phase Metallicity Gradients of Star-forming Galaxies in OverdenseEnvironments at Cosmic Noon. 2022, \textit{Astrophys. J. Letters}, 929, L8 (\href{https://arxiv.org/abs/2204.03008}{arXiv:2204.03008}) [8 citations] \\
+    10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the MAMMOTH-Grism HST slitless spectroscopic survey. 2022, \textit{Astrophys. J.}, 926, 70 (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373}) [26 citations] \\
 
-10 &  \textbf{Wang, X.} et al. The mass-metallicity relation at cosmic noon in overdense environments: first results from the MAMMOTH-Grism HST slitless spectroscopic survey. 2022, \textit{Astrophys. J.}, 926, 70 (\href{https://arxiv.org/abs/2108.06373}{arXiv:2108.06373}) [16 citations] \\
+    9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [45 citations] \\
 
-9 &  \textbf{Wang, X.} et al. A Census of Sub-kiloparsec Resolution Metallicity Gradients in Star-forming Galaxies at Cosmic Noon from HST Slitless Spectroscopy. 2020, \textit{Astrophys. J.}, 900, 183 (\href{https://arxiv.org/abs/1911.09841}{arXiv:1911.09841}) [25 citations] \\
+    8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [59 citations]  \\
 
-8 &  \textbf{Wang, X.} et al. Discovery of Strongly Inverted Metallicity Gradients in Dwarf Galaxies at $z$$\sim$2. 2019, \textit{Astrophys. J.}, 882, 94 (\href{https://arxiv.org/abs/1808.08800}{arXiv:1808.08800}) [39 citations]  \\
+    7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558} {arXiv:1610.07558}) [63 citations]    \\
 
-7 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) X. Sub-kiloparsec resolution gas-phase metallicity maps at cosmic noon behind the Hubble Frontier Fields cluster MACS1149.6+2223. 2017, \textit{Astrophys. J.}, 837, 89 (\href{http://arxiv.org/abs/1610.07558} {arXiv:1610.07558}) [53 citations]    \\
+    6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) [59 citations] \\
 
-6 &  \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) IV. Mass reconstruction of the lensing cluster Abell 2744 from frontier field imaging and GLASS spectroscopy. 2015, \textit{Astrophys. J.}, 811, 29 (\href{http://arxiv.org/abs/1504.02405}{arXiv:1504.02405}) [57 citations] \\
+    5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) [65 citations] \\
 
-5 &  Jones, T., \textbf{Wang, X.} et al. The Grism Lens-Amplified Survey from Space (GLASS) II. Gas-Phase Metallicity and Radial Gradients in an Interacting System At z$\sim$2. 2015, \textit{Astron. J.}, 149, 107 (\href{http://arxiv.org/abs/1410.0967}{arXiv:1410.0967}) [56 citations] \\
+    4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [4 citations] \\
 
-4 &  \textbf{Wang, X.}, Meng, X.-L., \& Huang, Y. F., Testing X-ray Measurements of Galaxy Cluster Gas Mass Fraction Using the Cosmic Distance-Duality Relation and Type Ia Supernovae. 2013, RAA, 13, 1013 (\href{http://arxiv.org/abs/1305.2077}{arXiv:1305.2077}) [4 citations] \\
+    3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol.  Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [32 citations] \\
 
-3 &  \textbf{Wang, X.}, Meng, X.-L. et al. Observational Constraints on Cosmic Neutrinos and Dark Energy Revisited. 2012, \textit{J. Cosmol.  Astropart. Phys.}, 11, 018 (\href{http://arxiv.org/abs/1210.2136}{arXiv:1210.2136}) [31 citations] \\
+    2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci.  China-Phys. Mech. Astron.}, 53 (Suppl.1), 259 [4 citations]    \\
 
-2 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. Constraint on the Counter-jet Emission in GRB Afterglows from GRB 980703. 2010, \textit{Sci.  China-Phys. Mech. Astron.}, 53 (Suppl.1), 259 [3 citations]    \\
-
-1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119}) [8 citations]   \\
+    1 &  \textbf{Wang, X.}, Huang, Y. F., \& Kong, S. W. On the Afterglow from the Receding Jet of Gamma-Ray Bursts. 2009, \textit{Astron. Astrophys.}, 505, 1213 (\href{http://arxiv.org/abs/0903.3119}{arXiv:0903.3119}) [11 citations]   \\
 
 \\[\narrow]
-\multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals}}      \\
+    \multicolumn{2}{c}{\textbf{Contributing Author Papers in Refereed Academic Journals (incomplete)}}      \\
 
 22  &   Prichard, L. J., ..., \textbf{Wang, X.} et al. Lyman Continuum Galaxy Candidates in COSMOS. 2021 \textit{Astrophys. J.} in 
     press (\href{https://arxiv.org/abs/2110.06945}{arXiv:2110.06945}) [3 citations]  \\
